# lan_discovery_tool

./: .gitignore  CMakeLists.txt  README.md  scanner.cpp
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  ci.yml  codeql-analysis.yml  format-check.yml
api/: Dockerfile  README.md
api/app/: auth.py  config.py  db.py  ingest.py  mac_resolver.py  main.py  mdns_merge.py  mdns_names.py  models.py  repository.py  security_policy.py
api/migrations/: 001_init.sql  schema.sql
api/tests/: test_db_init.py  test_ingest.py  test_mac_resolver.py  test_mdns_merge.py  test_mdns_names.py  test_repository.py  test_routes.py  test_security_policy.py
deploy/: Dockerfile.scanner  README.md  docker-compose.yml
include/: DiscoveryEngine.hpp  EventSink.hpp  Logger.hpp  MDNSDefinitions.hpp  NetworkSocket.hpp
include/core/: DeviceStateStore.hpp  MdnsPacketInterpreter.hpp  PacketReceiveQueue.hpp
include/discovery/: DeviceRegistry.hpp  DeviceSnapshot.hpp  DiscoveryRecord.hpp  DiscoveryTypes.hpp  MacResolver.hpp  MdnsNames.hpp  MdnsProbePlanner.hpp  RecordFilter.hpp  RecordLabels.hpp
include/event_sink/: ChangeFilteredEventSink.hpp  CompositeEventSink.hpp  DeviceSummaryEventSink.hpp  HttpEventSink.hpp  StdoutEventSink.hpp
include/log/: ThreadSafeLogger.hpp
include/mdns/: DnsProtocol.hpp  DnsTypes.hpp  MdnsMessageDecoder.hpp  Parser.hpp  QueryBuilder.hpp  RDataFormatter.hpp
include/scanner/: ApiConfig.hpp  CliArgs.hpp
include/util/: AgentDebugLog.hpp  BinaryStreamReader.hpp  BufferBoundsValidator.hpp  HexDump.hpp  InterfaceInfo.hpp  KeyBuilder.hpp
scripts/: build.sh  compose_up.sh  lan_db.py
src/: DiscoveryEngine.cpp  NetworkSocket.cpp  main.cpp
src/core/: DeviceStateStore.cpp  MdnsPacketInterpreter.cpp  PacketReceiveQueue.cpp
src/discovery/: DeviceRegistry.cpp  DiscoveryJson.cpp  DiscoveryRecord.cpp  MacResolver.cpp  MdnsNames.cpp  MdnsProbePlanner.cpp  RecordFilter.cpp  RecordLabels.cpp
src/event_sink/: ChangeFilteredEventSink.cpp  CompositeEventSink.cpp  DeviceSummaryEventSink.cpp  HttpEventSink.cpp  StdoutEventSink.cpp
src/mdns/: DnsTypes.cpp  MdnsMessageDecoder.cpp  Parser.cpp  QueryBuilder.cpp  RDataFormatter.cpp
src/scanner/: ApiConfig.cpp  CliArgs.cpp
src/util/: BufferBoundsValidator.cpp  HexDump.cpp  InterfaceInfo.cpp
tests/: CMakeLists.txt  test_api_config.cpp  test_device_registry.cpp  test_device_state_store.cpp  test_discovery_json.cpp  test_interpreter.cpp  test_mac_resolver.cpp  test_mdns_names.cpp  test_parser.cpp  test_probe_planner.cpp  test_record_labels.cpp
